Change .no-todo styling to stop the overflow

--- a/src/main.scss
+++ b/src/main.scss
@@ -4,17 +4,16 @@
 .todo-list {
   margin-right: 1rem;
   width: min(95ch, calc(100% - 1rem));
+  position: relative;
 }
 
 .no-todos {
-  height: 100%;
-  display: flex;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
+  font-size: 2rem;
+  color: var(--accent);
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 
   &:not(:only-child) {
     display: none;
